--- a/AeroControl/res/values/strings.xml
+++ b/AeroControl/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Aero Control</string>
+    <string name="app_name">Aero Control1</string>
     <string name="drawer_open">Open navigation drawer</string>
     <string name="drawer_close">Close navigation drawer</string>
     <string name="error_detected">Error ?</string>
